Initialize AI Debate Arena v2.1 with CI/CD

--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,76 @@
+# Environment variables
+.env
+.env.local
+.env.*.local
+*.env
+!.env.example
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# Virtual Environment
 venv/
 env/
+.venv/
 ENV/
-.venv
+
+# Logs
+*.log
+logs/
+backend.log
 
 # IDE
-.vscode/
 .idea/
+.vscode/
 *.swp
 *.swo
 *~
 
-# Environment variables
-.env
-.env.local
-
-# ChromaDB data
-chroma_db_data/
-chroma_db_mxbai/
-*.sqlite3
-
-# Model files (large files - uncomment if you want to exclude)
-# local_embeddings/
-# *.safetensors
-# *.bin
-
-# Saved articles
-saved_articles/*.txt
-
-# OS
+# OS files
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Logs
-*.log
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Docker
-.dockerignore
+# Build outputs
+dist/
+build/
+*.egg-info/
 
+# Test coverage
+.coverage
+htmlcov/
+.pytest_cache/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.temp
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Cache
+.cache/
+*.cache
+
+# Secrets and certificates
+*.pem
+*.key
+*.crt
+secrets/
+credentials/
