--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,7 @@ CHUTES_API_KEY=your_chutes_api_key_here
 BYTEZ_API_KEY=your_bytez_api_key_here
 
 
-TAVILY_API_KEY=
+TAVILY_API_KEY=your_tavily_api_key_here
 
 OPENROUTER_REFERER=http://localhost:3000
 OPENROUTER_TITLE=Local Knowledge Chatbot
