--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,7 +7,11 @@ CHUTES_API_KEY=your_chutes_api_key_here
 BYTEZ_API_KEY=your_bytez_api_key_here
 
 
-TAVILY_API_KEY=
+TAVILY_API_KEY=your_tavily_api_key_here
+
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
 
 OPENROUTER_REFERER=http://localhost:3000
 OPENROUTER_TITLE=Local Knowledge Chatbot
